{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 261,
  "lineage": "ef6eb6cd-08cc-002b-0520-f3c18c34be6f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instances",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "fastapi",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-056a29f2eddc40520",
            "arn": "arn:aws:ec2:ap-northeast-2:637423323447:instance/i-054c06c72fb0b1c77",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-054c06c72fb0b1c77",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "clouds2024",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d00b02e706523824",
            "private_dns": "ip-172-16-2-206.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.2.206",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0505b548b4f9ff820",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0546c3b3989f1bc07",
            "tags": {
              "Name": "tfTwentyThree2_fastapi"
            },
            "tags_all": {
              "Name": "tfTwentyThree2_fastapi"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d8f3fb8341150e61"
            ]
          },
          "dependencies": [
            "data.template_file.fastapi_userdata",
            "data.template_file.mariadb_userdata",
            "data.template_file.nginx_userdata",
            "module.private_subnet.aws_security_group.private_sg",
            "module.private_subnet.aws_subnet.private_subnet",
            "module.public_subnet.aws_security_group.public_sg",
            "module.public_subnet.aws_subnet.public_subnet",
            "module.public_subnet.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "mariadb",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-056a29f2eddc40520",
            "arn": "arn:aws:ec2:ap-northeast-2:637423323447:instance/i-0f27e90fb88f37f6a",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f27e90fb88f37f6a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "clouds2024",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02f9384eb83ac9171",
            "private_dns": "ip-172-16-3-128.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.3.128",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c2089fa9a3e6d7f1",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f7c696076b4c0b55",
            "tags": {
              "Name": "tfTwentyThree3_mariadb"
            },
            "tags_all": {
              "Name": "tfTwentyThree3_mariadb"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f5aa3518fd51ee27"
            ]
          },
          "dependencies": [
            "data.template_file.fastapi_userdata",
            "data.template_file.mariadb_userdata",
            "data.template_file.nginx_userdata",
            "module.private_subnet.aws_security_group.private_sg",
            "module.private_subnet.aws_subnet.private_subnet",
            "module.public_subnet.aws_security_group.public_sg",
            "module.public_subnet.aws_subnet.public_subnet",
            "module.public_subnet.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "nginx",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-056a29f2eddc40520",
            "arn": "arn:aws:ec2:ap-northeast-2:637423323447:instance/i-0e9fceebdfe1231d8",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e9fceebdfe1231d8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "clouds2024",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c5e90132235c70c6",
            "private_dns": "ip-172-16-0-198.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.0.198",
            "public_dns": "ec2-3-36-121-87.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.36.121.87",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01d59c1603bb9c649",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03e52c971fa26b066",
            "tags": {
              "Name": "tfTwentyThree1_nginx"
            },
            "tags_all": {
              "Name": "tfTwentyThree1_nginx"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06d170122bf9e3d45"
            ]
          },
          "dependencies": [
            "data.template_file.fastapi_userdata",
            "data.template_file.mariadb_userdata",
            "data.template_file.nginx_userdata",
            "module.private_subnet.aws_security_group.private_sg",
            "module.private_subnet.aws_subnet.private_subnet",
            "module.public_subnet.aws_security_group.public_sg",
            "module.public_subnet.aws_subnet.public_subnet",
            "module.public_subnet.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnet",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "fastapi",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a170df04c6eb69a9",
            "arn": "arn:aws:ec2:ap-northeast-2:637423323447:elastic-ip/eipalloc-0a170df04c6eb69a9",
            "domain": "vpc",
            "id": "eipalloc-0a170df04c6eb69a9",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-13-209-95-207.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.209.95.207",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "tfTwentyThree_eip_fastapi"
            },
            "tags_all": {
              "Name": "tfTwentyThree_eip_fastapi"
            },
            "vpc": true
          },
          "dependencies": [
            "module.public_subnet.aws_internet_gateway.igw",
            "module.public_subnet.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "mariadb",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0392ff0d306fb99a9",
            "arn": "arn:aws:ec2:ap-northeast-2:637423323447:elastic-ip/eipalloc-0392ff0d306fb99a9",
            "domain": "vpc",
            "id": "eipalloc-0392ff0d306fb99a9",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-43-202-11-203.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.202.11.203",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "tfTwentyThree_eip_mariadb"
            },
            "tags_all": {
              "Name": "tfTwentyThree_eip_mariadb"
            },
            "vpc": true
          },
          "dependencies": [
            "module.public_subnet.aws_internet_gateway.igw",
            "module.public_subnet.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnet",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "fastapi",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a170df04c6eb69a9",
            "association_id": "eipassoc-0d96940c3386d5959",
            "connectivity_type": "public",
            "id": "nat-031231d046c80b2cc",
            "network_interface_id": "eni-0b49ceea2be231390",
            "private_ip": "172.16.0.45",
            "public_ip": "13.209.95.207",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03e52c971fa26b066",
            "tags": {
              "Name": "tfTwentyThree_natgw_fastapi"
            },
            "tags_all": {
              "Name": "tfTwentyThree_natgw_fastapi"
            }
          },
          "dependencies": [
            "module.private_subnet.aws_eip.eip",
            "module.public_subnet.aws_internet_gateway.igw",
            "module.public_subnet.aws_subnet.public_subnet",
            "module.public_subnet.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "mariadb",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0392ff0d306fb99a9",
            "association_id": "eipassoc-02277cf58ddbd823d",
            "connectivity_type": "public",
            "id": "nat-055eb0ecc4adbd253",
            "network_interface_id": "eni-00c48e711e185dd46",
            "private_ip": "172.16.0.10",
            "public_ip": "43.202.11.203",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03e52c971fa26b066",
            "tags": {
              "Name": "tfTwentyThree_natgw_mariadb"
            },
            "tags_all": {
              "Name": "tfTwentyThree_natgw_mariadb"
            }
          },
          "dependencies": [
            "module.private_subnet.aws_eip.eip",
            "module.public_subnet.aws_internet_gateway.igw",
            "module.public_subnet.aws_subnet.public_subnet",
            "module.public_subnet.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnet",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "fastapi",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423323447:route-table/rtb-0d4521bcd78b211e9",
            "id": "rtb-0d4521bcd78b211e9",
            "owner_id": "637423323447",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-031231d046c80b2cc",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tfTwentyThree_privatertb_fastapi"
            },
            "tags_all": {
              "Name": "tfTwentyThree_privatertb_fastapi"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e98716b5a68c12a8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_subnet.aws_eip.eip",
            "module.private_subnet.aws_nat_gateway.natgw",
            "module.public_subnet.aws_internet_gateway.igw",
            "module.public_subnet.aws_subnet.public_subnet",
            "module.public_subnet.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "mariadb",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423323447:route-table/rtb-0057c9f653ca8a978",
            "id": "rtb-0057c9f653ca8a978",
            "owner_id": "637423323447",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-055eb0ecc4adbd253",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tfTwentyThree_privatertb_mariadb"
            },
            "tags_all": {
              "Name": "tfTwentyThree_privatertb_mariadb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e98716b5a68c12a8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_subnet.aws_eip.eip",
            "module.private_subnet.aws_nat_gateway.natgw",
            "module.public_subnet.aws_internet_gateway.igw",
            "module.public_subnet.aws_subnet.public_subnet",
            "module.public_subnet.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnet",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rtb_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "fastapi",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0159f0d49c4a74655",
            "route_table_id": "rtb-0d4521bcd78b211e9",
            "subnet_id": "subnet-0546c3b3989f1bc07"
          },
          "dependencies": [
            "module.private_subnet.aws_eip.eip",
            "module.private_subnet.aws_nat_gateway.natgw",
            "module.private_subnet.aws_route_table.private_rtb",
            "module.private_subnet.aws_subnet.private_subnet",
            "module.public_subnet.aws_internet_gateway.igw",
            "module.public_subnet.aws_subnet.public_subnet",
            "module.public_subnet.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "mariadb",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0438397aeec42f1f6",
            "route_table_id": "rtb-0057c9f653ca8a978",
            "subnet_id": "subnet-0f7c696076b4c0b55"
          },
          "dependencies": [
            "module.private_subnet.aws_eip.eip",
            "module.private_subnet.aws_nat_gateway.natgw",
            "module.private_subnet.aws_route_table.private_rtb",
            "module.private_subnet.aws_subnet.private_subnet",
            "module.public_subnet.aws_internet_gateway.igw",
            "module.public_subnet.aws_subnet.public_subnet",
            "module.public_subnet.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnet",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "fastapi",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423323447:security-group/sg-0d8f3fb8341150e61",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d8f3fb8341150e61",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "tfTwentyThree_private_sg_fastapi",
            "name_prefix": "",
            "owner_id": "637423323447",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tfTwentyThree_private_sg_fastapi"
            },
            "tags_all": {
              "Name": "tfTwentyThree_private_sg_fastapi"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e98716b5a68c12a8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_subnet.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "mariadb",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423323447:security-group/sg-0f5aa3518fd51ee27",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f5aa3518fd51ee27",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "tfTwentyThree_private_sg_mariadb",
            "name_prefix": "",
            "owner_id": "637423323447",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tfTwentyThree_private_sg_mariadb"
            },
            "tags_all": {
              "Name": "tfTwentyThree_private_sg_mariadb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e98716b5a68c12a8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_subnet.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "fastapi",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423323447:subnet/subnet-0546c3b3989f1bc07",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0546c3b3989f1bc07",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423323447",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tfTwentyThree_private_subnet_fastapi"
            },
            "tags_all": {
              "Name": "tfTwentyThree_private_subnet_fastapi"
            },
            "vpc_id": "vpc-0e98716b5a68c12a8"
          },
          "dependencies": [
            "module.public_subnet.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "mariadb",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423323447:subnet/subnet-0f7c696076b4c0b55",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "172.16.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f7c696076b4c0b55",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423323447",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tfTwentyThree_private_subnet_mariadb"
            },
            "tags_all": {
              "Name": "tfTwentyThree_private_subnet_mariadb"
            },
            "vpc_id": "vpc-0e98716b5a68c12a8"
          },
          "dependencies": [
            "module.public_subnet.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnet",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423323447:internet-gateway/igw-0958a159f241e5ebe",
            "id": "igw-0958a159f241e5ebe",
            "owner_id": "637423323447",
            "tags": {
              "Name": "tfTwentyThree_igw"
            },
            "tags_all": {
              "Name": "tfTwentyThree_igw"
            },
            "vpc_id": "vpc-0e98716b5a68c12a8"
          },
          "dependencies": [
            "module.public_subnet.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnet",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423323447:route-table/rtb-07b899f7c9df9fb22",
            "id": "rtb-07b899f7c9df9fb22",
            "owner_id": "637423323447",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0958a159f241e5ebe",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tfTwentyThree_public_rtb"
            },
            "tags_all": {
              "Name": "tfTwentyThree_public_rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e98716b5a68c12a8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_subnet.aws_internet_gateway.igw",
            "module.public_subnet.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnet",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rtbasso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07569900fb3eb4d5a",
            "route_table_id": "rtb-07b899f7c9df9fb22",
            "subnet_id": "subnet-03e52c971fa26b066"
          },
          "dependencies": [
            "module.public_subnet.aws_internet_gateway.igw",
            "module.public_subnet.aws_route_table.public_rtb",
            "module.public_subnet.aws_subnet.public_subnet",
            "module.public_subnet.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnet",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423323447:security-group/sg-06d170122bf9e3d45",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06d170122bf9e3d45",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tfTwentyThree_public_sg",
            "name_prefix": "",
            "owner_id": "637423323447",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tfTwentyThree_public_sg"
            },
            "tags_all": {
              "Name": "tfTwentyThree_public_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e98716b5a68c12a8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_subnet.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423323447:subnet/subnet-03e52c971fa26b066",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "172.16.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03e52c971fa26b066",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423323447",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tfTwentyThree_subnet"
            },
            "tags_all": {
              "Name": "tfTwentyThree_subnet"
            },
            "vpc_id": "vpc-0e98716b5a68c12a8"
          },
          "dependencies": [
            "module.public_subnet.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnet",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423323447:vpc/vpc-0e98716b5a68c12a8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/20",
            "default_network_acl_id": "acl-0407bc28fd93bfd48",
            "default_route_table_id": "rtb-0f58742e2433f5e76",
            "default_security_group_id": "sg-025edc573608914e2",
            "dhcp_options_id": "dopt-0d70a97a17464aba0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e98716b5a68c12a8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f58742e2433f5e76",
            "owner_id": "637423323447",
            "tags": {
              "Name": "tfTwentyThree_vpc"
            },
            "tags_all": {
              "Name": "tfTwentyThree_vpc"
            }
          }
        }
      ]
    }
  ]
}